--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     #hint      { position:absolute; top:8px; left:8px; color:#fff; background:rgba(0,0,0,.35); padding:4px 6px; border-radius:4px; font-size:12px; }
     #sizeBadge { position:absolute; right:8px; top:8px; color:#fff; background:rgba(0,0,0,.4); padding:2px 6px; border-radius:4px; font-size:12px; display:none; }
     #sizeBadge.tooSmall{ background:rgba(200,50,50,.75); }
-
+    #output { white-space: pre-wrap; font-family: ui-monospace, Consolas, monospace; font-size: 13px; }
     /* Right panel (output) */
     #outPanel { border:1px solid #eee; border-radius:8px; padding:var(--pad); overflow:auto; }
     pre { white-space:pre-wrap; word-wrap:break-word; margin:0; }
