--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>Gear OCR Overlay</title>
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; img-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root { --pad: 12px; }
-    html, body { margin:0; padding:0; height:100%; font-family: system-ui, Segoe UI, Roboto, Arial, sans-serif; }
-    header { display:flex; align-items:center; gap:10px; padding:var(--pad); border-bottom:1px solid #eee; }
-    button { padding:8px 12px; font-size:14px; }
-    #status { font-size:12px; opacity:.75; margin-left:auto; }
-    main { display:grid; grid-template-columns: 1fr 1fr; gap:var(--pad); padding:var(--pad); height: calc(100% - 56px); }
-    @media (max-width: 900px) { main { grid-template-columns: 1fr; } }
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; script-src 'self';"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Gear OCR Overlay</title>
+    <style>
+      :root { color-scheme: dark; }
+      html, body { margin:0; padding:0; height:100%; background:#0e0f12; color:#e8e8ea; font:14px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; }
+      header { display:flex; gap:8px; align-items:center; padding:10px 12px; background:#15161b; border-bottom:1px solid #24262d; position:sticky; top:0; z-index:3; }
+      header h1 { font-size:16px; margin:0 12px 0 0; font-weight:600; color:#fff; }
+      button { background:#2a2d37; color:#fff; border:1px solid #353845; border-radius:6px; padding:8px 12px; cursor:pointer; }
+      button:disabled { opacity:.6; cursor:not-allowed; }
+      main { display:grid; grid-template-columns:1fr 420px; gap:14px; padding:12px; min-height:calc(100% - 50px); }
+      @media (max-width: 900px) { main { grid-template-columns: 1fr; } }
+      .stage { position:relative; background:#0b0c10; border:1px solid #24262d; border-radius:8px; overflow:hidden; min-height:360px; }
+      .tools { position:absolute; left:10px; top:10px; z-index:2; display:flex; gap:8px; }
+      canvas { display:block; width:100%; height:auto; image-rendering:crisp-edges; }
+      .overlay-rect { position:absolute; border:2px solid #59a9ff; background-color:rgba(89,169,255,.15); pointer-events:none; z-index:2; }
+      aside { border:1px solid #24262d; background:#0b0c10; border-radius:8px; padding:12px; min-height:360px; }
+      h2 { font-size:15px; margin:0 0 8px 0; color:#fff; }
+      #status { font-size:12px; color:#9aa3b2; }
+      #output { white-space:pre-wrap; font:13px/1.45 ui-monospace,Consolas,Menlo,monospace; color:#d9dbea; }
+      .kv strong { color:#b7cffd; }
+      .hr { height:1px; background:#24262d; margin:10px 0; }
+      .hint { color:#93a0b2; font-size:12px; }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Gear OCR Overlay</h1>
+      <button id="btnCapture">Capture</button>
+      <button id="btnReset" disabled>Reset</button>
+      <div id="status" aria-live="polite"></div>
+    </header>
 
-    /* Left panel (screenshot & selection) */
-    #shotPanel { border:1px solid #eee; border-radius:8px; overflow:hidden; position:relative; min-height: 300px; }
-    #shotWrap  { position:relative; width:100%; height:100%; display:none; background:#111; cursor: crosshair; }
-    #shotImg   { display:block; max-width:100%; height:auto; user-select:none; -webkit-user-drag:none; }
-    #selectBox { position:absolute; border:2px dashed #2f7cff; background: rgba(47,124,255,.15); pointer-events:none; display:none; }
-    #hint      { position:absolute; top:8px; left:8px; color:#fff; background:rgba(0,0,0,.35); padding:4px 6px; border-radius:4px; font-size:12px; }
-    #sizeBadge { position:absolute; right:8px; top:8px; color:#fff; background:rgba(0,0,0,.4); padding:2px 6px; border-radius:4px; font-size:12px; display:none; }
-    #sizeBadge.tooSmall{ background:rgba(200,50,50,.75); }
-    #output { white-space: pre-wrap; font-family: ui-monospace, Consolas, monospace; font-size: 13px; }
-    /* Right panel (output) */
-    #outPanel { border:1px solid #eee; border-radius:8px; padding:var(--pad); overflow:auto; }
-    pre { white-space:pre-wrap; word-wrap:break-word; margin:0; }
-    .muted { opacity:.6; font-size:12px; margin-top:6px; }
-  </style>
-</head>
-<body>
-  <header>
-    <button id="btnCapture">Capture</button>
-    <button id="btnReset" title="Clear current screenshot">Reset</button>
-    <span id="status">Ready</span>
-  </header>
+    <main>
+      <section class="stage">
+        <div class="tools">
+          <span class="hint">Drag to select the gear panel</span>
+        </div>
+        <div id="rect" class="overlay-rect" hidden></div>
+        <canvas id="screenCanvas" width="0" height="0" aria-label="Screenshot canvas"></canvas>
+      </section>
 
-  <main>
-    <section id="shotPanel">
-      <div id="shotWrap">
-        <div id="hint">Drag to select an area</div>
-        <div id="sizeBadge"></div>
-        <img id="shotImg" alt="screenshot" draggable="false"/>
-        <div id="selectBox"></div>
-      </div>
-      <div id="emptyShot" style="padding:16px;color:#777;">Click <b>Capture</b> to take a screenshot, then drag to select the gear panel.</div>
-    </section>
+      <aside>
+        <h2>OCR Output</h2>
+        <div id="output">(no output yet)</div>
+        <div class="hr"></div>
+        <div class="hint">Two‑pass OCR: labels (title/type/names, zones only) + digits (numbers with whitelist).</div>
+      </aside>
+    </main>
 
-    <section id="outPanel">
-      <h3>OCR Output</h3>
-      <pre id="output">(no output)</pre>
-      <div class="muted">Two-pass OCR: labels (full text) + digits (numbers with whitelist)</div>
-    </section>
-  </main>
-
-  <script src="./renderer.js"></script>
-</body>
+    <script src="./renderer.js"></script>
+  </body>
 </html>
