--- a/roi.html
+++ b/roi.html
@@ -1,55 +1,52 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self';"/>
+  <meta charset="utf-8"/>
   <title>ROI</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'">
   <style>
-    html, body { margin:0; padding:0; background:transparent; overflow:hidden; }
-	.frame {position:absolute; inset:0;border:2px solid rgba(126,235,154,0.96);pointer-events:none;               /* default click-through */z-index:5;                         /* below the handles */}
-    .hint {
-      position:absolute; right:10px; top:10px;
-      font:12px/1.2 system-ui; color:#eaeaea;
-      background:rgba(20,24,28,0.9); border:1px solid rgba(255,255,255,0.08);
-      padding:4px 6px; border-radius:6px; display:none;
+    html, body { margin:0; padding:0; background: transparent; overflow: hidden; }
+    /* The visible rectangle (drawn inside the window area) */
+    .frame {
+      position: absolute;
+      inset: 0;
+      border: 2px solid #49ff47;
+      box-shadow: 0 0 0 2px rgba(0,0,0,0.25) inset;
+      pointer-events: none; /* we use window-level events */
     }
-    .edit .frame { pointer-events:auto; cursor:move; }
-    .edit .hint { display:block; }
-
-    /* Handles */
-    .handle { position:absolute; background:#7ceb9a; border:2px solid #0b0c10; border-radius:4px; display:none; z-index:10; pointer-events:auto;}
-    .corner { width:18px; height:18px; }
-    .edge   { width:18px; height:18px; }
-
-    .edit .handle { display:block; }
-
-    /* corners */
-    .tl { left:-9px;  top:-9px;   cursor:nwse-resize; }
-    .tr { right:-9px; top:-9px;   cursor:nesw-resize; }
-    .bl { left:-9px;  bottom:-9px;cursor:nesw-resize; }
-    .br { right:-9px; bottom:-9px;cursor:nwse-resize; }
-    /* edges (centred) */
-    .tm { left:50%;   top:-9px;   transform:translateX(-50%); cursor:ns-resize; }
-    .bm { left:50%;   bottom:-9px;transform:translateX(-50%); cursor:ns-resize; }
-    .lm { left:-9px;  top:50%;    transform:translateY(-50%); cursor:ew-resize; }
-    .rm { right:-9px; top:50%;    transform:translateY(-50%); cursor:ew-resize; }
+    /* resize hit areas on all edges/corners */
+    .edge { position:absolute; pointer-events:auto; }
+    .n, .s { left:0; right:0; height:8px; cursor: ns-resize; }
+    .n { top: -4px; } .s { bottom: -4px; }
+    .w, .e { top:0; bottom:0; width:8px; cursor: ew-resize; }
+    .w { left:-4px; } .e { right:-4px; }
+    .nw, .ne, .sw, .se {
+      width:14px; height:14px; background: rgba(73,255,71,0.9);
+      border-radius: 2px; cursor: nwse-resize;
+    }
+    .nw { position:absolute; left:-7px; top:-7px; }
+    .ne { position:absolute; right:-7px; top:-7px; cursor: nesw-resize; }
+    .sw { position:absolute; left:-7px; bottom:-7px; cursor: nesw-resize; }
+    .se { position:absolute; right:-7px; bottom:-7px; }
+    .hint {
+      position:absolute; top:6px; right:8px; color:#49ff47; font: 12px/1.2 system-ui, sans-serif;
+      text-shadow: 0 1px 2px rgba(0,0,0,.5);
+      pointer-events: none;
+    }
   </style>
 </head>
 <body>
-  <div id="frame" class="frame"></div>
-  <div id="hint" class="hint">Editing — drag/resize. (Esc/F8 to finish)</div>
-
-  <!-- corners -->
-  <div id="tl" class="handle corner tl"></div>
-  <div id="tr" class="handle corner tr"></div>
-  <div id="bl" class="handle corner bl"></div>
-  <div id="br" class="handle corner br"></div>
-  <!-- edges -->
-  <div id="tm" class="handle edge tm"></div>
-  <div id="bm" class="handle edge bm"></div>
-  <div id="lm" class="handle edge lm"></div>
-  <div id="rm" class="handle edge rm"></div>
+  <div class="frame"></div>
+  <!-- hit areas -->
+  <div class="edge n" data-dir="n"></div>
+  <div class="edge s" data-dir="s"></div>
+  <div class="edge w" data-dir="w"></div>
+  <div class="edge e" data-dir="e"></div>
+  <div class="nw" data-dir="nw"></div>
+  <div class="ne" data-dir="ne"></div>
+  <div class="sw" data-dir="sw"></div>
+  <div class="se" data-dir="se"></div>
+  <div class="hint" id="hint">Editing ROI</div>
 
   <script src="./roi.js"></script>
 </body>
