--- a/index.html
+++ b/index.html
@@ -2,34 +2,30 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self';"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gear OCR Overlay</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'">
   <style>
-    :root { color-scheme: dark; }
-    html, body { margin:0; padding:0; background:#0e0f12; color:#e8e8ea;
-      font:13px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; }
-    .wrap { padding:10px; }
-    .row { display:flex; gap:8px; margin:8px 0; }
-    button { flex:1; background:#2a2d37; color:#fff; border:1px solid #3a3d4a; border-radius:6px; padding:8px 10px; cursor:pointer; }
-    .status { margin-top:6px; color:#aab2c2; min-height:18px; }
-    .out { margin-top:8px; font:12px/1.3 ui-monospace,Consolas,monospace; white-space:pre-wrap; color:#d9dbea; max-height:300px; overflow:auto; }
+    html,body { margin:0; padding:12px; font-family: system-ui, Segoe UI, Roboto, sans-serif; }
+    .bar { display: flex; gap: 8px; align-items: center; }
+    button { padding: 8px 10px; border: 1px solid #888; background: #f4f4f4; border-radius: 6px; cursor: pointer; }
+    button:hover { background: #eee; }
+    #out { width: 100%; height: 280px; margin-top: 10px; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+    #status { color:#444; margin-left: 8px; font-size: 12px; }
+    #roi-info { margin-left: auto; font-size: 12px; color: #555; }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="row">
-      <button id="btnEdit">Edit ROI</button>
-      <button id="btnAuto">Auto</button>
-    </div>
-    <div class="row">
-      <button id="btnSnap">Snap</button>
-      <button id="btnBox">Box</button>
-    </div>
-    <div class="status" id="status">Ready. (F8 edit, F9 snap, F10 auto, Ctrl+F10 panic, F7 box)</div>
-    <div class="out" id="out"></div>
+  <div class="bar">
+    <button id="btn-edit">Edit ROI</button>
+    <button id="btn-auto">Auto</button>
+    <button id="btn-snap">Snap</button>
+    <button id="btn-box">Box</button>
+    <span id="status">Loading…</span>
+    <span id="roi-info"></span>
   </div>
+
+  <textarea id="out" readonly placeholder="Logs…"></textarea>
+
   <script src="./renderer.js"></script>
 </body>
 </html>
